@@ -1,3 +1,9 @@
+1.x.x
+------------------
+CHANGES:
+- No more shows archived projects in new tickets or tickets without a set
+  project. (Alex Pagnoni)
+
 1.5.0 - 2014/02/02
 ------------------
 NEW FEATURES:
